[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
name = "prost-simple-rpc"
description = "A simple RPC implementation on top of prost"
license = "MIT"
repository = "https://github.com/dflemstr/prost-simple-rpc"
version = "0.3.1-alpha.0"
edition = "2021"

[dependencies]
bytes = "1.10.1"
thiserror = "2.0.17"
futures = "0.3.31"
prost = "0.14.1"
pin-project = "1.0.12"

[dependencies.clippy]
optional = true
version = "0.0.302"

[workspace]
members = ["build", "example"]

[features]
default = []
dev = ["clippy"]
